--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/therapytestdb
+spring.datasource.username=therapy
+spring.datasource.password=test
+spring.datasource.driverClassName=org.postgresql.Driver
