Set up postgres db and populate it with sample data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
+spring.datasource.platform=postgresql
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:postgresql://localhost:5432/therapytestdb
 spring.datasource.username=therapy
 spring.datasource.password=test
 spring.datasource.driverClassName=org.postgresql.Driver
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
