Bind email and telephone number

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/therapytestdb
 spring.datasource.username=therapy
 spring.datasource.password=test
 spring.datasource.driverClassName=org.postgresql.Driver
-logging.level.org.hibernate.SQL=INFO
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=DEBUG
