--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
     id "io.miret.etienne.sass" version "1.1.1"
+    id "org.siouan.frontend" version "3.0.0"
 }
 
 group = 'com.mduczmal'
@@ -18,6 +19,27 @@ compileSass {
     noErrorCss()
     sourceMap = file
     sourceMapUrls = relative
+}
+
+frontend {
+    nodeDistributionProvided = false
+    nodeVersion = '12.18.3'
+    nodeDistributionUrlRoot = 'https://nodejs.org/dist/'
+    nodeDistributionUrlPathPattern = 'vVERSION/node-vVERSION-ARCH.TYPE'
+    nodeInstallDirectory = file("${rootDir}/.gradle/node")
+
+    yarnEnabled = false
+    yarnDistributionProvided = false
+    yarnVersion = '1.22.4'
+    yarnDistributionUrlRoot = 'https://github.com/yarnpkg/yarn/releases/download/'
+    yarnDistributionUrlPathPattern = 'vVERSION/yarn-vVERSION.tar.gz'
+    yarnInstallDirectory = file("${rootDir}/.gradle/yarn")
+
+    installScript = 'install'
+    assembleScript = 'run build'
+
+    packageJsonDirectory = projectDir
+    verboseModeEnabled = false
 }
 
 processResources {
