--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   }
