--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.platform=postgresql
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:postgresql://localhost:5432/therapytestdb
 spring.datasource.username=therapy
 spring.datasource.password=test
